--- a/src/Components/Recorder/Recorder.css
+++ b/src/Components/Recorder/Recorder.css
@@ -7,15 +7,13 @@
   border-radius: 20px;
   box-shadow: 0 0 15px 5px grey;
   background-color: #fff;
-  position: relative;
 }
 .back {
-  position: absolute;
-  left: 10px;
-  margin: 10px;
   border: 2px solid #fff;
   border-radius: 50%;
   background: #fff;
+  display: flex;
+  align-items: start;
 }
 .back:hover {
   cursor: pointer;
@@ -26,17 +24,13 @@
   flex-direction: row;
   align-items: center;
   height: 50vh;
-  margin: 20px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
 }
 
 .startButton {
-  width: 80px;
-  height: 80px;
-  margin: 50px;
+  width: 5rem;
+  height: 5rem;
   align-items: center;
-  font-family: "Material Icons";
-  font-size: 48px;
   background: none;
   color: #e74c3c;
   border: 2px solid #fff;
@@ -53,7 +47,6 @@
   box-shadow: rgb(176, 188, 245) 0px 0px 20px 0px;
 }
 .downBTN {
-  position: absolute;
   padding: 2rem;
   right: 0;
   bottom: 0;
@@ -98,11 +91,13 @@
 }
 .tip {
   padding: 1rem;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
   font-style: italic;
   color: grey;
 }
 
-.sentences {
-  padding-top: 3rem;
+.score{ 
+  display: flex;
+  justify-content: center;
+  color:rgb(231, 76, 60)
 }
