--- a/src/Components/Recorder/Recorder.css
+++ b/src/Components/Recorder/Recorder.css
@@ -23,7 +23,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  height: 50vh;
+  margin-top: 8rem;
   font-family: sans-serif;
 }
 
@@ -100,4 +100,17 @@
   display: flex;
   justify-content: center;
   color:rgb(231, 76, 60)
+}
+
+.doubleButton{
+gap: 16;
+}
+
+.showRecord {
+  margin: 2rem;
+  margin-bottom: 4rem;
+}
+
+.buttons {
+  margin:2rem;
 }
